--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1>Image Gallery</h1>
 
     <div class="full-img flex flex-align-items-center flex-flex-direction--column">
-      <button class="dark">Darken</button>
+      <button>Darken</button>
       <img class="displayed-img" src="images/pic1.jpg" />
       <div class="overlay"></div>
       <div class="thumb-bar flex"></div>
